# python-module-02

./: .gitignore  test_unittest.py
ex00/: ft_filter.py  ft_map.py  ft_reduce.py
ex01/: main.py
ex02/: loggy.py
ex03/: csvreader.py
ex04/: pyproject.toml
ex05/: TinyStatistician.py
