[project]
name = "my_minipack"
version = "0.0.1"
authors = [
  { name="stamim", email="stamim@student.1337.ma" },
]
description = "Python Modules 02 - ex04"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mylastresort/python-module-02/tree/master/ex04"